--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,12 +13,12 @@ steps:
     agents:
       - "queue=mac-anka-templater-fleet"
     env:
-      REPO: "${BUILDKITE_REPO}"
-      REPO_BRANCH: "${BUILDKITE_BRANCH}"
+      REPO: "${BUILDKITE_PULL_REQUEST_REPO:-$BUILDKITE_REPO}"
+      REPO_COMMIT: "${BUILDKITE_COMMIT}"
       CHECKSUMABLE: "${CHECKSUMABLE}"
       TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
       TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
-      TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.bash -y -P -m" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
+      TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -m" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
       PROJECT_TAG: "${MAC_TAG}"
     timeout: 60
 
@@ -30,11 +30,11 @@ steps:
   #     branch: "master"
   #     env:
   #       REPO: "${BUILDKITE_REPO}"
-  #       REPO_BRANCH: "${BUILDKITE_BRANCH}"
+  #       REPO_COMMIT: "${BUILDKITE_COMMIT}"
   #       CHECKSUMABLE: "${CHECKSUMABLE}"
   #       TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
   #       TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
-  #       TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.bash -y -P -m" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
+  #       TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -m" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
   #       PROJECT_TAG: "${MAC_TAG}"
 
   - wait
@@ -45,7 +45,7 @@ steps:
 
   - label: ":darwin: [Darwin] Mojave Build"
     command:
-      - "git clone git@github.com:EOSIO/eos.git -b ${BUILDKITE_BRANCH} eos && cd eos && git submodule update --init --recursive && ./scripts/eosio_build.bash -y -P -m"
+      - "git clone ${BUILDKITE_PULL_REQUEST_REPO:-$BUILDKITE_REPO} && cd eos && git checkout ${BUILDKITE_COMMIT} && git submodule update --init --recursive && ./scripts/eosio_build.sh -y -P -m"
       - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz eos"
     plugins:
       chef/anka#v0.4.4:
