added environment file to serial test to load in mongo variables

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -22,10 +22,11 @@ export CMAKE_VERSION=${CMAKE_VERSION_MAJOR}.${CMAKE_VERSION_MINOR}.${CMAKE_VERSI
 # MONGO
 export MONGODB_VERSION=3.6.3
 export MONGODB_ROOT=${OPT_LOCATION}/mongodb-${MONGODB_VERSION}
+export MONGODB_BIN=${BIN_LOCATION}/mongod
 export MONGODB_CONF=${ETC_LOCATION}/mongod.conf
-export MONGODB_LOG_LOCATION=${VAR_LOCATION}/log/mongodb
-export MONGODB_LINK_LOCATION=${OPT_LOCATION}/mongodb
-export MONGODB_DATA_LOCATION=${DATA_LOCATION}/mongodb
+export MONGODB_LOG_DIR=${VAR_LOCATION}/log/mongodb
+export MONGODB_LINK_DIR=${OPT_LOCATION}/mongodb
+export MONGODB_DATA_DIR=${DATA_LOCATION}/mongodb
 export MONGO_C_DRIVER_VERSION=1.13.0
 export MONGO_C_DRIVER_ROOT=${SRC_LOCATION}/mongo-c-driver-${MONGO_C_DRIVER_VERSION}
 export MONGO_CXX_DRIVER_VERSION=3.4.0
