new var names + tests to use ctest absolute path

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -5,13 +5,13 @@ export INSTALL_LOCATION=${INSTALL_LOCATION:-$HOME}
 export EOSIO_HOME="${INSTALL_LOCATION}/eosio/${EOSIO_VERSION}"
 export TEMP_DIR="${INSTALL_LOCATION}/tmp"
 
-export SRC_LOCATION=${EOSIO_HOME}/src
-export OPT_LOCATION=${EOSIO_HOME}/opt
-export VAR_LOCATION=${EOSIO_HOME}/var
-export ETC_LOCATION=${EOSIO_HOME}/etc
-export BIN_LOCATION=${EOSIO_HOME}/bin
-export LIB_LOCATION=${EOSIO_HOME}/lib
-export DATA_LOCATION=${EOSIO_HOME}/data
+export SRC_DIR=${EOSIO_HOME}/src
+export OPT_DIR=${EOSIO_HOME}/opt
+export VAR_DIR=${EOSIO_HOME}/var
+export ETC_DIR=${EOSIO_HOME}/etc
+export BIN_DIR=${EOSIO_HOME}/bin
+export LIB_DIR=${EOSIO_HOME}/lib
+export DATA_DIR=${EOSIO_HOME}/data
 
 # CMAKE
 export CMAKE_VERSION_MAJOR=3
@@ -21,16 +21,16 @@ export CMAKE_VERSION=${CMAKE_VERSION_MAJOR}.${CMAKE_VERSION_MINOR}.${CMAKE_VERSI
 
 # MONGO
 export MONGODB_VERSION=3.6.3
-export MONGODB_ROOT=${OPT_LOCATION}/mongodb-${MONGODB_VERSION}
-export MONGODB_BIN=${BIN_LOCATION}/mongod
-export MONGODB_CONF=${ETC_LOCATION}/mongod.conf
-export MONGODB_LOG_DIR=${VAR_LOCATION}/log/mongodb
-export MONGODB_LINK_DIR=${OPT_LOCATION}/mongodb
-export MONGODB_DATA_DIR=${DATA_LOCATION}/mongodb
+export MONGODB_ROOT=${OPT_DIR}/mongodb-${MONGODB_VERSION}
+export MONGODB_BIN=${BIN_DIR}/mongod
+export MONGODB_CONF=${ETC_DIR}/mongod.conf
+export MONGODB_LOG_DIR=${VAR_DIR}/log/mongodb
+export MONGODB_LINK_DIR=${OPT_DIR}/mongodb
+export MONGODB_DATA_DIR=${DATA_DIR}/mongodb
 export MONGO_C_DRIVER_VERSION=1.13.0
-export MONGO_C_DRIVER_ROOT=${SRC_LOCATION}/mongo-c-driver-${MONGO_C_DRIVER_VERSION}
+export MONGO_C_DRIVER_ROOT=${SRC_DIR}/mongo-c-driver-${MONGO_C_DRIVER_VERSION}
 export MONGO_CXX_DRIVER_VERSION=3.4.0
-export MONGO_CXX_DRIVER_ROOT=${SRC_LOCATION}/mongo-cxx-driver-r${MONGO_CXX_DRIVER_VERSION}
+export MONGO_CXX_DRIVER_ROOT=${SRC_DIR}/mongo-cxx-driver-r${MONGO_CXX_DRIVER_VERSION}
 export ENABLE_MONGO=${ENABLE_MONGO:-false}
 export INSTALL_MONGO=${INSTALL_MONGO:-false}
 
@@ -39,21 +39,21 @@ export BOOST_VERSION_MAJOR=1
 export BOOST_VERSION_MINOR=67
 export BOOST_VERSION_PATCH=0
 export BOOST_VERSION=${BOOST_VERSION_MAJOR}_${BOOST_VERSION_MINOR}_${BOOST_VERSION_PATCH}
-export BOOST_ROOT=${BOOST_LOCATION:-${SRC_LOCATION}/boost_${BOOST_VERSION}}
-export BOOST_LINK_LOCATION=${OPT_LOCATION}/boost
+export BOOST_ROOT=${BOOST_LOCATION:-${SRC_DIR}/boost_${BOOST_VERSION}}
+export BOOST_LINK_LOCATION=${OPT_DIR}/boost
 
 # LLVM
 export LLVM_VERSION=release_40
-export LLVM_ROOT=${OPT_LOCATION}/llvm
+export LLVM_ROOT=${OPT_DIR}/llvm
 export LLVM_DIR=${LLVM_ROOT}/lib/cmake/llvm
 
 # DOXYGEN
 export DOXYGEN_VERSION=1_8_14
-export DOXYGEN_ROOT=${SRC_LOCATION}/doxygen-${DOXYGEN_VERSION}
+export DOXYGEN_ROOT=${SRC_DIR}/doxygen-${DOXYGEN_VERSION}
 export ENABLE_DOXYGEN=${ENABLE_DOXYGEN:-false}
 
 # CLANG
-export CLANG_ROOT=${OPT_LOCATION}/clang8
+export CLANG_ROOT=${OPT_DIR}/clang8
 export PINNED_COMPILER_BRANCH=release_80
 export PINNED_COMPILER_LLVM_COMMIT=18e41dc
 export PINNED_COMPILER_CLANG_COMMIT=a03da8b
